--- a/src/pages/iletisim.astro
+++ b/src/pages/iletisim.astro
@@ -49,8 +49,8 @@ import BaseLayout from '../layouts/BaseLayout.astro';
             </svg>
             <div>
               <h3 class="font-semibold text-gray-900 mb-1">E-posta</h3>
-              <a href="mailto:info@koz-der.org" class="text-primary-600 hover:text-primary-700">
-                info@koz-der.org
+              <a href="mailto:info@kozder.com" class="text-primary-600 hover:text-primary-700">
+                info@kozder.com
               </a>
             </div>
           </div>
